# bonds-api

./: README.md  codecov.yml  renovate.json
.github/: copilot-instructions.md
.github/workflows/: backend.yml  frontend.yml  scraper.yml
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  fly.toml  openapi.yaml  rust-toolchain.toml
backend/.cargo/: config.toml
backend/.github/: copilot-instructions.md
backend/.run/: Run myapp-cli.run.xml
backend/assets/: Dane_dotyczace_obligacji_detalicznych.xls
backend/config/: development.yaml  production.yaml  test.yaml
backend/crates/api/: Cargo.toml  README.md
backend/crates/api/src/: models.rs  types.rs
backend/crates/api/src/apis/: default.rs
backend/crates/api/src/server/: mod.rs
backend/crates/bonds-reader/: Cargo.toml
backend/crates/bonds-reader/src/: lib.rs  price.rs  value_generator.rs
backend/crates/bonds-reader/src/snapshots/: bonds_reader__tests__read_edo0125bind.snap  bonds_reader__tests__read_edo1224bond.snap  bonds_reader__tests__read_rod1235bond.snap  bonds_reader__value_generator__tests__daily_bond_value_calculation_like_edo0125.snap  bonds_reader__value_generator__tests__daily_bond_value_calculation_like_edo1224.snap  bonds_reader__value_generator__tests__daily_bond_value_calculation_like_rod1235-2.snap  bonds_reader__value_generator__tests__daily_bond_value_calculation_like_rod1235.snap
backend/crates/loco-rs-otel/: Cargo.toml
backend/crates/loco-rs-otel/src/: config.rs  lib.rs  otel.rs
backend/crates/model/: Cargo.toml
backend/crates/model/src/: lib.rs
backend/openapi_generator/templates/loco-rs/: Cargo.mustache  server-imports.mustache  server-operation.mustache  server-route.mustache
backend/src/: app.rs  lib.rs
backend/src/controllers/: home.rs  mod.rs  obligacje.rs  openapi.rs
backend/src/datastore/: bonds_datastore.rs  mod.rs
backend/src/initializers/: mod.rs  openapi.rs
backend/src/services/: bonds.rs  mod.rs
backend/src/views/: mod.rs  obligacje.rs
backend/tests/fixtures/bonds/: TEST123.json  test.xls
backend/tests/requests/: bonds.rs  home.rs  mod.rs  obligacje.rs
backend/tests/requests/snapshots/: r#mod__requests__bonds__can_get_existing_bond_csv.snap
frontend/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
frontend/src/: index.html  main.ts  styles.css
frontend/src/app/: app.config.ts  app.css  app.html  app.spec.ts  app.ts
frontend/src/app/services/: bond-data.service.spec.ts  bond-data.service.ts  bond-files.service.ts  endpoint-config.service.ts
frontend/src/environments/: environment.development.ts  environment.review.ts  environment.ts
scraper/: .gitignore  link_id_extractor.py  main.py  pyproject.toml  requirements.txt  tables_extractor.py
scraper/tests/: test_extractor.py
