[workspace]
members = [
    "crates/loco-rs-otel",
    "crates/api",
    "crates/bonds-reader",
    "crates/model"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[package]
name = "myapp"
version.workspace = true
edition.workspace = true
publish = false
default-run = "myapp-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
bonds-reader = { path = "crates/bonds-reader" }
loco-rs-otel = { path = "crates/loco-rs-otel" }
openapi = { path = "crates/api" }
model = { path = "crates/model" }

loco-rs = { version = "0.16.1", default-features = false }
axum = { version = "0.8.1" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tracing = { version = "0.1.40" }
opentelemetry = "0.30.0"
opentelemetry_sdk = "0.30.0"
tracing-opentelemetry = "0.31.0"
tracing-core = "0.1.34"
opentelemetry-semantic-conventions = "0.30.0"
opentelemetry-stdout = "0.30.0"
opentelemetry-otlp = "0.30.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
axum-tracing-opentelemetry = { version = "0.30.0" }
opentelemetry-appender-tracing = { version = "0.30.1", features = ["experimental_use_tracing_span_context", "experimental_metadata_attributes"] }
axum-otel-metrics = "0.12.0"
include_dir = "0.7.4"
axum-extra = "0.10.1"
loco-openapi = { version = "*", features = [
    "full",
], git = "https://github.com/loco-rs/loco-openapi-Initializer", branch = "main" }
anyhow = "1.0.98"
serde_yaml = "0.9.34+deprecated"
chrono = "0.4.41"
pretty_assertions = "1.4.1"
itertools = "0.14.0"
calamine = { version = "0.30.0", features = ["dates"] }
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters", "csv"] }
bon = "3.7.0"
rust_decimal = {version = "1.37.2", features = ["macros"]}

[dependencies]
loco-rs = { workspace = true, features = ["cli"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.33.0", default-features = false, features = [
    "rt-multi-thread",
] }
tracing.workspace = true
axum.workspace = true
async-trait = { version = "0.1.74" }
loco-rs-otel.workspace = true
include_dir.workspace = true
openapi.workspace = true
axum-extra.workspace = true
loco-openapi.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
chrono.workspace = true
itertools.workspace = true
bonds-reader.workspace = true
model.workspace = true

[[bin]]
name = "myapp-cli"
path = "src/bin/main.rs"
required-features = []
[[bin]]
name = "tool"
path = "src/bin/tool.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.26.0" }
tempfile = "3.8"
pretty_assertions.workspace = true
insta.workspace = true