[package]
name = "loco-rs-otel"
version.workspace = true
edition.workspace = true

[dependencies]
loco-rs.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
tracing-opentelemetry.workspace = true
tracing-core.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry-stdout.workspace = true
opentelemetry-otlp.workspace = true
tracing-subscriber.workspace = true
axum-tracing-opentelemetry.workspace = true
opentelemetry-appender-tracing.workspace = true
axum-otel-metrics.workspace = true
tracing.workspace = true
init-tracing-opentelemetry = { version = "0.30.0",  features = [
    "otlp",
    "tracing_subscriber_ext",
    "metrics"
]  }